# broken-static-factory

./: .gitignore  Cargo.toml  README.md  package.json
npm/darwin-arm64/: README.md  package.json
src/: lib.rs
